yangliu first commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="bao_xiao">bx</string>
     <string name="cha_xun">query</string>
     <string name="info">info</string>
+    <string name="test">test</string>
 </resources>
