--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">OCRDemo</string>
     <string name="TAKE_PHOTO">take photo</string>
     <string name="PHOTO_DESCRIPTION">picture</string>
+    <string name="title">Login</string>
+    <string name="Login">Login</string>
+    <string name="Clear">Clear</string>
 </resources>
